--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,10 +1,12 @@
 .header-container {
+    padding-top: 5px;
     width: 100vw;
     height: auto;
+    text-align: center;
 }
 
 .header-container .logo {
-    max-width: 100%;
+    max-width: 85%;
     height: auto;
 }
 
