--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -14,3 +14,11 @@
     position: relative;
     bottom: 20px;
 }
+
+.header-container > .links-container .button {
+    padding: 16px;
+}
+
+.header-container .button > .link {
+    font-size: 24px;
+}
