refactory - change color name

--- a/styles/objects/button.css
+++ b/styles/objects/button.css
@@ -10,6 +10,6 @@
     background-color: var(--color-fourth);
 }
 
-.button.-color-sixth {
-    background-color: var(--color-sixth);
+.button.-color-fifth {
+    background-color: var(--color-fifth);
 }
