--- a/styles/settings/color.css
+++ b/styles/settings/color.css
@@ -3,6 +3,6 @@
     --color-second: #000;
     --color-third: #D54062;
     --color-fourth: #FFA36C;
-    --color-fifth: #EBDC87;
-    --color-sixth: #799351;
+    --color-fifth: #799351;
+    --color-sixth: #EBDC87;
 }
