create team picture section

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,3 +11,4 @@
 /* components */
 @import "./components/header.css";
 @import "./components/project.css";
+@import "./components/team-picture.css";
