create donation section

--- a/styles/main.css
+++ b/styles/main.css
@@ -14,3 +14,4 @@
 @import "./components/project.css";
 @import "./components/team-picture.css";
 @import "./components/team.css";
+@import "./components/donation.css";
