create footer and address section

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,3 +15,4 @@
 @import "./components/team-picture.css";
 @import "./components/team.css";
 @import "./components/donation.css";
+@import "./components/footer.css";
