adjuste container width

--- a/styles/components/donation.css
+++ b/styles/components/donation.css
@@ -1,3 +1,7 @@
+.donation {
+    width: 98vw;
+}
+
 .donation > .text-container {
     background-color: var(--color-fifth);
     color: var(--color-first);
