--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,6 +1,6 @@
 .header-container {
     padding-top: 5px;
-    width: 100vw;
+    width: 100%;
     height: auto;
     text-align: center;
 }
@@ -13,13 +13,38 @@
 .header-container > .menu {
     position: relative;
     bottom: 20px;
+    width: 100%;
 }
 
 .header-container > .menu .button {
     padding: 16px;
     font-size: 24px;
+    width: 100%;
 }
 
 .header-container > .menu .text {
     font-size: 16px;
+}
+
+@media (min-width: 800px) {
+    .header-container .logo {
+        max-width: 700px;
+        height: auto;
+    }
+
+    .header-container > .menu {
+        display: flex;
+        justify-content: space-between;
+        bottom: 70px;
+    }
+
+    .header-container > .menu .text {
+        font-size: 14px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .header-container > .menu .text {
+        font-size: 16px;
+    }
 }
